[tool.poetry]
name = "studenthelper"
version = "0.1.0"
description = ""
authors = ["HullabalooRobotics <33364183+HullabalooRobotics@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "no"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
